# assistant

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/assistant/: __init__.py  auth.py  cli.py
src/assistant/calendar/: __init__.py  client.py  commands.py
src/assistant/drive/: __init__.py  client.py  commands.py
src/assistant/gmail/: __init__.py  client.py  commands.py
src/assistant/sheets/: __init__.py  client.py  commands.py
src/assistant/utils/: __init__.py  display.py
