[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assistant"
version = "0.1.0"
description = "CLI tool for Gmail and Google Calendar"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
assistant = "assistant.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant"]
